--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <!-- add for scaling -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -14,6 +15,7 @@
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div class="navigation-links">
+            <!-- Fixed the link -->
             <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
             <li><a href="#online-reputation-management">Online Reputation Management</a></li>
             <li><a href="#social-media-marketing">Social Media Marketing</a></li>
