--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Added Header  -->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <!-- added nav -->
         <nav>
             <ul>
                 <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
@@ -19,7 +20,8 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
+    <!-- added main  -->
+    <main></main>
     <section>
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
