--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <div class="header">
+    <!-- added header -->
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -23,7 +24,7 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </header>
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
@@ -71,6 +72,7 @@
             </p>
         </div>
     </div>
+    <!-- added footer -->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
