--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- added header -->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <!-- added nav -->
         <nav>
             <ul>
                 <li>
@@ -27,7 +28,8 @@
     </header>
     <div class="hero"></div>
     <div class="content">
-        <div class="search-engine-optimization">
+        <!-- fixed link  -->
+        <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
