--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
         </nav>
     </header>
     <div class="hero"></div>
-    <div class="content">
-        <!-- fixed link  -->
+    <!-- added main -->
+    <main>
+        <!-- fixed link -->
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -56,7 +57,7 @@
                 increase your lead generation.
             </p>
         </div>
-    </div>
+    </main>
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
