--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             </p>
         </div>
     </main>
-    <div class="benefits">
+    <!-- added section -->
+    <section>
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -83,7 +84,7 @@
                 need to advertise your page.
             </p>
         </div>
-    </div>
+    </section>
     <!-- added footer -->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
