--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
+    <!-- added image -->
+    <img></img>
     <!-- added main -->
     <main>
         <!-- fixed link -->
