--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
             </ul>
         </nav>
     </header>
-    <!-- added image -->
-    <img></img>
+    <div class="hero"></div>
     <!-- added main -->
     <main>
         <!-- fixed link -->
