--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </p>
         </div>
     </main>
-    <!-- added section -->
+    <!-- added aside -->
     <aside>
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
