--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
+    <!-- added article  -->
+    <article></article>
     <!-- added main -->
     <main>
         <!-- fixed link -->
