--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <!-- added header -->
     <header>
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <!-- added span -->
+        <h1>Hori<span>seo</span>n</h1>
         <!-- added nav -->
         <nav>
             <ul>
