--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
             </p>
-        </div>
+        </section>
         <!-- added section  -->
         <section>
             <h3>Brand Awareness</h3>
@@ -72,7 +72,7 @@
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
             </p>
-        </div>
+        </section>
         <!-- added section -->
         <section>
             <h3>Cost Management</h3>
@@ -81,7 +81,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
             </p>
-        </div>
+        </section>
     </aside>
     <!-- added footer -->
     <footer>
