--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </aside>
     <!-- added footer -->
     <footer>
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <strong>Made with ❤️️ by Horiseon</strong>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
