--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     </aside>
     <!-- added footer -->
     <footer>
+        <!-- added strong -->
         <strong>Made with ❤️️ by Horiseon</strong>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
