--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
         <!-- fixed link -->
         <div id="search-engine-optimization" class="services">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="SEO computing" class="float-left" /></img>
+            <img src="./assets/images/search-engine-optimization.jpg" alt="SEO computing"/></img>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
@@ -36,7 +36,7 @@
             </p>
         </div>
         <div id="online-reputation-management" class="services">
-            <img src="./assets/images/online-reputation-management.jpg" alt="reputation manager at work" class="float-right" /></img>
+            <img src="./assets/images/online-reputation-management.jpg" alt="reputation manager at work"/></img>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -45,7 +45,7 @@
             </p>
         </div>
         <div id="social-media-marketing" class="services">
-            <img src="./assets/images/social-media-marketing.jpg" alt="using social media company icons" class="float-left" /></img>
+            <img src="./assets/images/social-media-marketing.jpg" alt="using social media company icons"/></img>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you
