--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <main>
         <!-- fixed link -->
         <div id="search-engine-optimization" class="services">
+            <!-- removed img class -->
             <img src="./assets/images/search-engine-optimization.jpg" alt="SEO computing"/></img>
             <h2>Search Engine Optimization</h2>
             <p>
@@ -36,6 +37,7 @@
             </p>
         </div>
         <div id="online-reputation-management" class="services">
+            <!-- removed img class -->
             <img src="./assets/images/online-reputation-management.jpg" alt="reputation manager at work"/></img>
             <h2>Online Reputation Management</h2>
             <p>
@@ -45,6 +47,7 @@
             </p>
         </div>
         <div id="social-media-marketing" class="services">
+            <!-- removed img class -->
             <img src="./assets/images/social-media-marketing.jpg" alt="using social media company icons"/></img>
             <h2>Social Media Marketing</h2>
             <p>
