--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- added main -->
     <main>
         <!-- fixed link -->
-        <div id="search-engine-optimization" class="services">
+        <div id="search-engine-optimization" >
             <!-- removed img class -->
             <img src="./assets/images/search-engine-optimization.jpg" alt="SEO computing"/></img>
             <h2>Search Engine Optimization</h2>
@@ -36,7 +36,7 @@
                 your visibility and find the right customers for your business.
             </p>
         </div>
-        <div id="online-reputation-management" class="services">
+        <div id="online-reputation-management" >
             <!-- removed img class -->
             <img src="./assets/images/online-reputation-management.jpg" alt="reputation manager at work"/></img>
             <h2>Online Reputation Management</h2>
@@ -46,7 +46,7 @@
                 you the control over what potential customers see when they search for your business.
             </p>
         </div>
-        <div id="social-media-marketing" class="services">
+        <div id="social-media-marketing" >
             <!-- removed img class -->
             <img src="./assets/images/social-media-marketing.jpg" alt="using social media company icons"/></img>
             <h2>Social Media Marketing</h2>
