--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
     <article></article>
     <!-- added main -->
     <main>
-        <!-- fixed link --> <!-- removed img class -->
+        <!-- fixed link -->
+        <!-- removed img class -->
         <div id="search-engine-optimization">
             <!-- removed img class -->
-            <img src="./assets/images/search-engine-optimization.jpg" alt="SEO computing"/></img>
+            <img src="./assets/images/search-engine-optimization.jpg" alt="SEO computing" /></img>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
@@ -39,7 +40,7 @@
         <!-- removed img class -->
         <div id="online-reputation-management">
             <!-- removed img class -->
-            <img src="./assets/images/online-reputation-management.jpg" alt="reputation manager at work"/></img>
+            <img src="./assets/images/online-reputation-management.jpg" alt="reputation manager at work" /></img>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -50,7 +51,7 @@
         <!-- removed img class -->
         <div id="social-media-marketing">
             <!-- removed img class -->
-            <img src="./assets/images/social-media-marketing.jpg" alt="using social media company icons"/></img>
+            <img src="./assets/images/social-media-marketing.jpg" alt="using social media company icons" /></img>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you
@@ -63,7 +64,7 @@
     <aside>
         <section>
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="Icon lead generation"/></img>
+            <img src="./assets/images/lead-generation.png" alt="Icon lead generation" /></img>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
@@ -72,7 +73,7 @@
         <!-- added section  -->
         <section>
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="Icon brand awareness"/></img>
+            <img src="./assets/images/brand-awareness.png" alt="Icon brand awareness" /></img>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
@@ -81,7 +82,7 @@
         <!-- added section -->
         <section>
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="Icon const management"/></img>
+            <img src="./assets/images/cost-management.png" alt="Icon const management" /></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
