replace article with textarea

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             </ul>
         </nav>
     </header>
-    <!-- added article  -->
-    <article></article>
+    <!-- added textarea  -->
+    <textarea></textarea>
     <!-- added main -->
     <main>
         <!-- fixed link -->
