made changes to textarea and made it summary

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <!-- added textarea  -->
-    <textarea></textarea>
+    <summary></summary>
     <!-- added main -->
     <main>
         <!-- fixed link -->
