--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
     </header>
-    <!-- added textarea  -->
+    <!-- added summary  -->
     <summary></summary>
     <!-- added main -->
     <main>
