--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <main>
         <!-- fixed link -->
         <!-- removed img class -->
-        <div id="search-engine-optimization">
+        <!-- added article -->
+        <article id="search-engine-optimization">
             <!-- removed img class -->
             <img src="./assets/images/search-engine-optimization.jpg" alt="SEO computing" /></img>
             <h2>Search Engine Optimization</h2>
@@ -36,7 +37,7 @@
                 travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
                 your visibility and find the right customers for your business.
             </p>
-        </div>
+        </article>
         <!-- removed img class -->
         <div id="online-reputation-management">
             <!-- removed img class -->
@@ -49,7 +50,8 @@
             </p>
         </div>
         <!-- removed img class -->
-        <div id="social-media-marketing">
+        <!-- added article -->
+        <article id="social-media-marketing">
             <!-- removed img class -->
             <img src="./assets/images/social-media-marketing.jpg" alt="using social media company icons" /></img>
             <h2>Social Media Marketing</h2>
@@ -58,7 +60,7 @@
                 determine which platforms are suited to your brand, using analytics to find the right markets and
                 increase your lead generation.
             </p>
-        </div>
+        </article>
     </main>
     <!-- added aside -->
     <aside>
