added notes and added figure to last div and all works with no errors NO Divs in the htlm

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             </p>
         </article>
         <!-- removed img class -->
-        <div id="online-reputation-management">
+        <!-- added figure -->
+        <figure id="online-reputation-management">
             <!-- removed img class -->
             <img src="./assets/images/online-reputation-management.jpg" alt="reputation manager at work" /></img>
             <h2>Online Reputation Management</h2>
@@ -48,7 +49,7 @@
                 internet connection to say whatever they want about your business. Online Reputation Management gives
                 you the control over what potential customers see when they search for your business.
             </p>
-        </div>
+        </figure>
         <!-- removed img class -->
         <!-- added article -->
         <article id="social-media-marketing">
