--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     </main>
     <!-- added aside -->
     <aside>
+        <!-- added section  -->
         <section>
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Icon lead generation" /></img>
